--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Andrew Burrell</h2>
-							<p>Software Developer  -  Game Developer  -  Mid-level Marth Player</p>
+							<p><pre>Software Developer  —  Game Developer  —  Mid-level Marth Player</pre></p>
 						</div>
 					</section>
 
@@ -56,7 +56,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Hiya!</h2>
+										<h2 class="major">Heya!</h2>
 										<p>I'm Andrew! I'm a software developer currently working at <a href="https://www.arriver.com">Arriver</a>. I'm also a game developer, and made a bunch of stuff using Unity! I spend all my free time either playing games, or making them!</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
@@ -68,8 +68,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Humble Beginnings??</h2>
+										<p>I graduated from the University of Michigan back in 2018 with a Bachelors in Computer Science and Mechanical Engineering. I started making games in Unity since 2014, and my best languages are C# and C++. </p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -80,8 +80,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Onto that Grimdark Future!</h2>
+										<p>I'm also the co-founder of Cuppa Games, a recently-formed game development company (we plan to announce our first major project soon, so stay tuned!). Software and video game development is going to be a major part of my life forever - I hope this little website can showcase a fraction of all the love and passion I have towards them!</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -156,8 +156,8 @@
 									Oak Park, MI 48237
 								</li>
 								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">andrewrburrell@gmail.com</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/Sayruutoe</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto: andrewrburrell@gmail.com">andrewrburrell@gmail.com</a></li>
+								<li class="icon brands fa-twitter"><a href="https://twitter.com/Sayruutoe">twitter.com/Sayruutoe</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
