--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/cuppalogo.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Onto that Grimdark Future!</h2>
 										<p>I'm also the co-founder of Cuppa Games, a recently-formed game development company (we plan to announce our first major project soon, so stay tuned!). Software and video game development is going to be a major part of my life forever - I hope this little website can showcase a fraction of all the love and passion I have towards them!</p>
