--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Andrew Burrell</h2>
-							<p><pre>Software Developer  —  Game Developer  —  Mid-level Marth Player</pre></p>
+							<p>Software Developer &nbsp;—&nbsp; Game Developer &nbsp;—&nbsp; Mid-level Marth Player</p>
 						</div>
 					</section>
 
@@ -80,7 +80,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/cuppalogo.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Onto that Grimdark Future!</h2>
+										<h2 class="major">Onwards and (hopefully) Upwards!</h2>
 										<p>I'm also the co-founder of Cuppa Games, a recently-formed game development company (we plan to announce our first major project soon, so stay tuned!). Software and video game development is going to be a major part of my life forever - I hope this little website can showcase a fraction of all the love and passion I have towards them!</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
@@ -90,19 +90,19 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Projects and Games</h2>
+									<p>Here's some projects that I've worked on, check them out!</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/lightsout.gif" alt="" /></a>
+											<h3 class="major">Project "Buttermilk"</h3>
+											<p>Project that we're currently working on at Cuppa Games. Stay tuned for more info!</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/lightsout.gif" alt="" /></a>
+											<h3 class="major">Lights Out</h3>
+											<p>A moody horror platformer where your candle is your life. Submitted to Ludum Dare 49.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
