--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 									<p>Here's some projects that I've worked on, check them out!</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/lightsout.gif" alt="" /></a>
+											<a href="#" class="image"><img src="images/buttermilk.png" alt="" /></a>
 											<h3 class="major">Project "Buttermilk"</h3>
 											<p>Project that we're currently working on at Cuppa Games. Stay tuned for more info!</p>
 											<a href="#" class="special">Learn more</a>
@@ -106,15 +106,15 @@
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/planarshift.png" alt="" /></a>
+											<h3 class="major">Planar Shift</h3>
+											<p>A JRPG that I was working on solo when I first started using Unity. Currently inactive, but there's a cool demo where you can fight rock monsters.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/tentacleturmoil.png" alt="" /></a>
+											<h3 class="major">Tentacle Turmoil</h3>
+											<p>A coop action game where you and three friends each control a single tentacle of a giant, clumsy sea monster! Created for my senior project class at university.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
