--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/planarshift.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/tentacleturmoil.png" alt="" /></a>
 											<h3 class="major">Tentacle Turmoil</h3>
 											<p>A coop action game where you and three friends each control a single tentacle of a giant, clumsy sea monster! Created for my senior project class at university.</p>
 											<a href="#" class="special">Learn more</a>
