--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/umich.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Humble Beginnings??</h2>
 										<p>I graduated from the University of Michigan back in 2018 with a Bachelors in Computer Science and Mechanical Engineering. I started making games in Unity since 2014, and my best languages are C# and C++. </p>
