--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Andrew Burrell - Portfolio</a></h1>
 						<nav>
-							<a href="#menu">Menu</a>
+							<!--<a href="#menu">Menu</a>-->
 						</nav>
 					</header>
 
@@ -58,7 +58,7 @@
 									<div class="content">
 										<h2 class="major">Heya!</h2>
 										<p>I'm Andrew! I'm a software developer currently working at <a href="https://www.arriver.com">Arriver</a>. I'm also a game developer, and made a bunch of stuff using Unity! I spend all my free time either playing games, or making them!</p>
-										<a href="#" class="special">Learn more</a>
+										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
 							</section>
@@ -70,7 +70,7 @@
 									<div class="content">
 										<h2 class="major">Humble Beginnings??</h2>
 										<p>I graduated from the University of Michigan back in 2018 with a Bachelors in Computer Science and Mechanical Engineering. I started making games in Unity since 2014, and my best languages are C# and C++. </p>
-										<a href="#" class="special">Learn more</a>
+										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
 							</section>
@@ -82,7 +82,7 @@
 									<div class="content">
 										<h2 class="major">Onwards and (hopefully) Upwards!</h2>
 										<p>I'm also the co-founder of Cuppa Games, a recently-formed game development company (we plan to announce our first major project soon, so stay tuned!). Software and video game development is going to be a major part of my life forever - I hope this little website can showcase a fraction of all the love and passion I have towards them!</p>
-										<a href="#" class="special">Learn more</a>
+										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
 							</section>
@@ -94,28 +94,28 @@
 									<p>Here's some projects that I've worked on, check them out!</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/buttermilk.png" alt="" /></a>
+											<a href="https://twitter.com/cuppagames" class="image"><img src="images/buttermilk.png" alt="" /></a>
 											<h3 class="major">Project "Buttermilk"</h3>
-											<p>Project that we're currently working on at Cuppa Games. Stay tuned for more info!</p>
-											<a href="#" class="special">Learn more</a>
+											<p>Project that we're currently working on at Cuppa Games. Follow <a href="https://twitter.com/cuppagames">@cuppagames</a> and stay tuned for more info!</p>
+											<a href="https://twitter.com/cuppagames" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/lightsout.gif" alt="" /></a>
+											<a href="https://ldjam.com/events/ludum-dare/46/lights-out-3" class="image"><img src="images/lightsout.gif" alt="" /></a>
 											<h3 class="major">Lights Out</h3>
 											<p>A moody horror platformer where your candle is your life. Submitted to Ludum Dare 49.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://ldjam.com/events/ludum-dare/46/lights-out-3" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/planarshift.png" alt="" /></a>
+											<a href="https://kusanagi.itch.io/planar-shift" class="image"><img src="images/planarshift.png" alt="" /></a>
 											<h3 class="major">Planar Shift</h3>
 											<p>A JRPG that I was working on solo when I first started using Unity. Currently inactive, but there's a cool demo where you can fight rock monsters.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://kusanagi.itch.io/planar-shift" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/tentacleturmoil.png" alt="" /></a>
+											<a href="https://kusanagi.itch.io/tentacle-turmoil" class="image"><img src="images/tentacleturmoil.png" alt="" /></a>
 											<h3 class="major">Tentacle Turmoil</h3>
 											<p>A coop action game where you and three friends each control a single tentacle of a giant, clumsy sea monster! Created for my senior project class at university.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://kusanagi.itch.io/tentacle-turmoil" class="special">Learn more</a>
 										</article>
 									</section>
 									<ul class="actions">
@@ -155,12 +155,12 @@
 									23880 Ithaca St.<br />
 									Oak Park, MI 48237
 								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
+								<!--<li class="icon solid fa-phone">(000) 000-0000</li>-->
 								<li class="icon solid fa-envelope"><a href="mailto: andrewrburrell@gmail.com">andrewrburrell@gmail.com</a></li>
 								<li class="icon brands fa-twitter"><a href="https://twitter.com/Sayruutoe">twitter.com/Sayruutoe</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
