added ggj stuff

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Heya!</h2>
-										<p>I'm Andrew! I'm a software developer currently working at <a href="https://www.arriver.com">Arriver</a>. I'm also a game developer, and made a bunch of stuff using Unity! I spend all my free time either playing games, or making them!</p>
+										<p>I'm Andrew! I'm a software developer currently working as a UI/UX software engineer at <a href="https://www.arriver.com">Arriver</a>.</p>
+										<p>I'm also a game developer, and have made a bunch of stuff using Unity! I spend most of my free time playing games, reading about game design, or, you know, making games!</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
@@ -116,6 +117,12 @@
 											<h3 class="major">Tentacle Turmoil</h3>
 											<p>A coop action game where you and three friends each control a single tentacle of a giant, clumsy sea monster! Created for my senior project class at university.</p>
 											<a href="https://kusanagi.itch.io/tentacle-turmoil" class="special">Learn more</a>
+										</article>
+										<article>
+											<a href="https://globalgamejam.org/users/saruto" class="image"><img src="images/global-game-jam-logo.jpg" alt="" /></a>
+											<h3 class="major">Global Game Jam Games</h3>
+											<p>I've also participated a few times in the yearly Global Game Jam! Check 'em out in the link below!</p>
+											<a href="https://globalgamejam.org/users/saruto" class="special">Learn more</a>
 										</article>
 									</section>
 									<ul class="actions">
