--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>If you have business stuff you wanna talk about, or if you just wanna chat about games or dev or game dev or whatever, just hit me up! :)</p>
-							<form method="post" action="#">
+							<!--<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -156,11 +156,11 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</form>
+							</form>-->
 							<ul class="contact">
 								<li class="icon solid fa-home">
-									23880 Ithaca St.<br />
-									Oak Park, MI 48237
+									<!--23880 Ithaca St.<br />-->
+									Oak Park, MI <!--48237-->
 								</li>
 								<!--<li class="icon solid fa-phone">(000) 000-0000</li>-->
 								<li class="icon solid fa-envelope"><a href="mailto: andrewrburrell@gmail.com">andrewrburrell@gmail.com</a></li>
