--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Heya!</h2>
+										<h2 class="major">It's-a me!</h2>
 										<p>I'm Andrew! I'm a software developer currently working as a UI/UX software engineer at <a href="https://www.arriver.com">Arriver</a>.</p>
 										<p>I'm also a game developer, and have made a bunch of stuff using Unity! I spend most of my free time playing games, reading about game design, or, you know, making games!</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
@@ -69,7 +69,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/umich.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Humble Beginnings??</h2>
+										<h2 class="major">Edumacation (haha)</h2>
 										<p>I graduated from the University of Michigan back in 2018 with a Bachelors in Computer Science and Mechanical Engineering. I started making games in Unity since 2014, and my best languages are C# and C++. </p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
