--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Projects and Games</h2>
+									<h2 class="major">My Creations</h2>
 									<p>Here's some projects that I've worked on, check them out!</p>
 									<section class="features">
 										<article>
