--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 								</li>
 								<!--<li class="icon solid fa-phone">(000) 000-0000</li>-->
 								<li class="icon solid fa-envelope"><a href="mailto: andrewrburrell@gmail.com">andrewrburrell@gmail.com</a></li>
-								<li class="icon brands fa-twitter"><a href="https://twitter.com/Sayruutoe">twitter.com/Sayruutoe</a></li>
+								<li class="icon brands fa-twitter"><a href="https://twitter.com/Sayruutoe">@Sayruutoe</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
