--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/self.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">It's-a me!</h2>
 										<p>I'm Andrew! I'm a software developer currently working as a UI/UX software engineer at <a href="https://www.arriver.com">Arriver</a>.</p>
