--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
 								</li>
 								<!--<li class="icon solid fa-phone">(000) 000-0000</li>-->
 								<li class="icon solid fa-envelope"><a href="mailto: andrewrburrell@gmail.com">andrewrburrell@gmail.com</a></li>
+								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/andrew-burrell-b4496517b/">Andrew - Linkedin</a></li>
+								<li class="icon brands fa-github"><a href="https://github.com/Saruto">Saruto</a></li>
 								<li class="icon brands fa-twitter"><a href="https://twitter.com/Sayruutoe">@Sayruutoe</a></li>
 							</ul>
 							<ul class="copyright">
