--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/umich.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Edumacation (haha)</h2>
+										<h2 class="major">brb, bio(graphy)</h2>
 										<p>I graduated from the University of Michigan back in 2018 with a Bachelors in Computer Science and Mechanical Engineering. I started making games in Unity since 2014, and my best languages are C# and C++. </p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
