--- a/index.html
+++ b/index.html
@@ -94,23 +94,23 @@
 									<h2 class="major">My Creations</h2>
 									<p>Here's some projects that I've worked on, check them out!</p>
 									<section class="features">
-										<article>
+										<article-large>
 											<a href="https://twitter.com/cuppagames" class="image"><img src="images/buttermilk.png" alt="" /></a>
 											<h3 class="major">Project "Buttermilk"</h3>
 											<p>Project that we're currently working on at Cuppa Games. Follow <a href="https://twitter.com/cuppagames">@cuppagames</a> and stay tuned for more info!</p>
 											<a href="https://twitter.com/cuppagames" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="https://www.kyungeki.moe/" class="image"><img src="images/kyungeki.png" alt="" /></a>
-											<h3 class="major">Kyungeki Workshop</h3>
-											<p><i>(NSFW!)</i> A visual novel game company that worked alongside lots of crowdfunded artists/designers. I worked for them back in college, primarly on <a href="https://steamcommunity.com/app/852480">Snow Daze</a> and <a href="https://kyungekiworkshop.itch.io/absolutely-haunting">Absolutely Haunting</a>.</p>
-											<a href="https://www.kyungeki.moe/" class="special">Learn more</a>
-										</article>
+										</article-large>
 										<article>
 											<a href="https://ldjam.com/events/ludum-dare/46/lights-out-3" class="image"><img src="images/lightsout.gif" alt="" /></a>
 											<h3 class="major">Lights Out</h3>
 											<p>A moody horror platformer where your candle is your life. Submitted to Ludum Dare 49.</p>
 											<a href="https://ldjam.com/events/ludum-dare/46/lights-out-3" class="special">Learn more</a>
+										</article>
+										<article>
+											<a href="https://www.kyungeki.moe/" class="image"><img src="images/kyungeki.png" alt="" /></a>
+											<h3 class="major">Kyungeki Workshop</h3>
+											<p><i>(NSFW)</i> A visual novel game company that worked alongside lots of crowdfunded artists/designers. I worked for them back in college, primarly on <a href="https://steamcommunity.com/app/852480">Snow Daze</a> and <a href="https://kyungekiworkshop.itch.io/absolutely-haunting">Absolutely Haunting</a>.</p>
+											<a href="https://www.kyungeki.moe/" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="https://kusanagi.itch.io/planar-shift" class="image"><img src="images/planarshift.png" alt="" /></a>
