--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Andrew Burrell</h2>
-							<p>Software Engineer &nbsp;—&nbsp; Game Developer &nbsp;—&nbsp; Mid-level Marth Player</p>
+							<p>Software Engineer &nbsp;•&nbsp; Game Developer &nbsp;•&nbsp; Mid-level Marth Player</p>
 						</div>
 					</section>
 
