--- a/index.html
+++ b/index.html
@@ -69,8 +69,12 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/umich.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Education</h2>
-										<p>I graduated from the University of Michigan back in 2018 with a Bachelors in Computer Science and Mechanical Engineering. I started making games in Unity since 2014, and my best languages are C# and C++. </p>
+										<h2 class="major">Background</h2>
+										<ul>
+											<li>Graduated from the University of Michigan in 2018, with a dual Bachelors degree in Computer Science and Mechanical Engineering.</li>
+											<li>Started making games in Unity in 2014, and have been using it consistantly ever since.</li>
+											<li>Best Languages: C# and C++.</li>
+										</ul>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
@@ -82,7 +86,8 @@
 									<a href="#" class="image"><img src="images/cuppalogo.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Onwards and (hopefully) Upwards!</h2>
-										<p>I'm also the co-founder of Cuppa Games, a recently-formed game development company (we plan to announce our first major project soon, so stay tuned!). Software and video game development is going to be a major part of my life forever - I hope this little website can showcase a fraction of all the love and passion I have towards them!</p>
+										<p>I'm also the co-founder of Cuppa Games, a game development company focusing on brewing cozy multiplayer experiences! We plan to announce our first major project soon, so stay tuned!.</p>
+										<p>Software and video game development is going to be a major part of my life forever - I hope this little website can showcase a fraction of all the love and passion I have towards them!</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
@@ -98,37 +103,43 @@
 											<a href="https://twitter.com/cuppagames" class="image"><img src="images/buttermilk.png" alt="" /></a>
 											<h3 class="major">Project "Buttermilk"</h3>
 											<p>Project that we're currently working on at Cuppa Games. Follow <a href="https://twitter.com/cuppagames">@cuppagames</a> and stay tuned for more info!</p>
-											<a href="https://twitter.com/cuppagames" class="special">Learn more</a>
+											<a href="https://twitter.com/cuppagames" class="special">Check out our twitter!</a>
 										</article-large>
 										<article>
 											<a href="https://ldjam.com/events/ludum-dare/46/lights-out-3" class="image"><img src="images/lightsout.gif" alt="" /></a>
 											<h3 class="major">Lights Out</h3>
-											<p>A moody horror platformer where your candle is your life. Submitted to Ludum Dare 49.</p>
-											<a href="https://ldjam.com/events/ludum-dare/46/lights-out-3" class="special">Learn more</a>
+											<p>A dark, moody horror platformer we made for Ludum Dare 46 (the theme: "Keep it alive"), where your candle is your life. This one's a personal favorite - it was a ton of fun working on something more atmospheric.</p>
+											<a href="https://ldjam.com/events/ludum-dare/46/lights-out-3" class="special">Play it Here!</a>
 										</article>
 										<article>
 											<a href="https://www.kyungeki.moe/" class="image"><img src="images/kyungeki.png" alt="" /></a>
 											<h3 class="major">Kyungeki Workshop</h3>
 											<p><i>(NSFW)</i> A visual novel game company that worked alongside lots of crowdfunded artists/designers. I worked for them back in college, primarly on <a href="https://steamcommunity.com/app/852480">Snow Daze</a> and <a href="https://kyungekiworkshop.itch.io/absolutely-haunting">Absolutely Haunting</a>.</p>
-											<a href="https://www.kyungeki.moe/" class="special">Learn more</a>
+											<a href="https://www.kyungeki.moe/" class="special">See their website here!</a>
 										</article>
 										<article>
-											<a href="https://kusanagi.itch.io/planar-shift" class="image"><img src="images/planarshift.png" alt="" /></a>
+											<a href="https://kusanagi.itch.io/planar-shift" class="image"><img src="images/planarshift.gif" alt="" /></a>
 											<h3 class="major">Planar Shift</h3>
-											<p>A JRPG that I was working on solo when I first started using Unity. Currently inactive, but there's a cool demo where you can fight rock monsters.</p>
-											<a href="https://kusanagi.itch.io/planar-shift" class="special">Learn more</a>
+											<p>A small JRPG demo that I solo-developed for a few years while learning Unity. Features cool systems like a class-swapping mechanic, an upgrade tree, customizable spell slots, and character-specific mechanics and resources.</p>
+											<a href="https://kusanagi.itch.io/planar-shift" class="special">Check out the Demo!</a>
 										</article>
 										<article>
-											<a href="https://kusanagi.itch.io/tentacle-turmoil" class="image"><img src="images/tentacleturmoil.png" alt="" /></a>
+											<a href="https://kusanagi.itch.io/tentacle-turmoil" class="image"><img src="images/tentacleturmoil.gif" alt="" /></a>
 											<h3 class="major">Tentacle Turmoil</h3>
-											<p>A coop action game where you and three friends each control a single tentacle of a giant, clumsy sea monster! Created for my senior project class at university.</p>
-											<a href="https://kusanagi.itch.io/tentacle-turmoil" class="special">Learn more</a>
+											<p>A chaotic co-op action game where you and three friends each control a single tentacle of a giant, clumsy sea monster! Created for my senior project class.</p>
+											<a href="https://kusanagi.itch.io/tentacle-turmoil" class="special">Play it Here!</a>
+										</article>
+										<article>
+											<a href="https://github.com/Saruto/Inertia" class="image"><img src="images/inertia.gif" alt="" /></a>
+											<h3 class="major">Inertia</h3>
+											<p>text text text</p>
+											<a href="https://github.com/Saruto/Inertia" class="special">See the source code!</a>
 										</article>
 										<article>
 											<a href="https://globalgamejam.org/users/saruto" class="image"><img src="images/global-game-jam-logo.jpg" alt="" /></a>
 											<h3 class="major">Global Game Jam Games</h3>
-											<p>I've also participated a few times in the yearly Global Game Jam! Check 'em out in the link below!</p>
-											<a href="https://globalgamejam.org/users/saruto" class="special">Learn more</a>
+											<p>I've also participated a few times in the yearly Global Game Jam. Includes (overly ambitious) concepts like a networked tower defense game, or an awkward thanksgiving dinner simulator!</p>
+											<a href="https://globalgamejam.org/users/saruto" class="special">Check 'em all out here!</a>
 										</article>
 									</section>
 									<ul class="actions">
