--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 										<article>
 											<a href="https://github.com/Saruto/Inertia" class="image"><img src="images/inertia.gif" alt="" /></a>
 											<h3 class="major">Inertia</h3>
-											<p>text text text</p>
+											<p>A super-small platformer I made around 2016/17 to learn more about Unity. It's also networked, so you can play online too. The project is public on my Github.</p>
 											<a href="https://github.com/Saruto/Inertia" class="special">See the source code!</a>
 										</article>
 										<article>
@@ -142,9 +142,9 @@
 											<a href="https://globalgamejam.org/users/saruto" class="special">Check 'em all out here!</a>
 										</article>
 									</section>
-									<ul class="actions">
+									<!-- <ul class="actions">
 										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
+									</ul>-->
 								</div>
 							</section>
 
