--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<div class="content">
 										<h2 class="major">Background</h2>
 										<ul>
-											<li>Graduated from the University of Michigan in 2018, with a dual Bachelors degree in Computer Science and Mechanical Engineering.</li>
+											<li>Graduated from the University of Michigan - Ann Arbor in 2018, with a dual Bachelors degree in Computer Science and Mechanical Engineering.</li>
 											<li>Started making games in Unity in 2014, and have been using it consistantly ever since.</li>
 											<li>Best Languages: C# and C++.</li>
 										</ul>
@@ -86,7 +86,7 @@
 									<a href="#" class="image"><img src="images/cuppalogo.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Onwards and (hopefully) Upwards!</h2>
-										<p>I'm also the co-founder of Cuppa Games, a game development company focusing on brewing cozy multiplayer experiences! We plan to announce our first major project soon, so stay tuned!.</p>
+										<p>I'm also the co-founder of Cuppa Games, a game development company focusing on brewing cozy multiplayer experiences! We actually just announced our first major title - Project Chromaticasters! Check it out in the next section!</p>
 										<p>Software and video game development is going to be a major part of my life forever - I hope this little website can showcase a fraction of all the love and passion I have towards them!</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
@@ -101,9 +101,10 @@
 									<section class="features">
 										<article-large>
 											<a href="https://twitter.com/cuppagames" class="image"><img src="images/buttermilk.png" alt="" /></a>
-											<h3 class="major">Project "Buttermilk"</h3>
-											<p>Project that we're currently working on at Cuppa Games. Follow <a href="https://twitter.com/cuppagames">@cuppagames</a> and stay tuned for more info!</p>
+											<h3 class="major">Project Chromaticasters</h3>
+											<p>A 4-player cooperative roguelike, where each player needs to combine their unique elemental magic with creativity and teamwork to win! Follow <a href="https://twitter.com/cuppagames">@cuppagames</a>, or check out one of our dev's <a href="https://www.youtube.com/channel/UCUFdjZJa-YGZRrvm3B1nIRA">youtube channel</a> to stay tuned for more info!</p>
 											<a href="https://twitter.com/cuppagames" class="special">Check out our twitter!</a>
+											<a href="https://t.co/uBCXAtgx42" class="special">Watch our first devlog!</a>
 										</article-large>
 										<article>
 											<a href="https://ldjam.com/events/ludum-dare/46/lights-out-3" class="image"><img src="images/lightsout.gif" alt="" /></a>
