--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Andrew Burrell - Portfolio</a></h1>
 						<nav>
-							<!--<a href="#menu">Menu</a>-->
+							<a href="#menu">Menu</a>
 						</nav>
 					</header>
 
@@ -31,9 +31,10 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="index.html">Resumé</a></li>
+								<!--<li><a href="generic.html">Generic</a></li>-->
+								<!--<li><a href="elements.html">Elements</a></li>-->
+								<!--<li><a href="#">Sign Up</a></li>-->
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
