--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="index.html">Resumé</a></li>
+								<li><a href="saruto.github.io/documents/Andrew Burrell Resume.pdf">Resumé</a></li>
 								<!--<li><a href="generic.html">Generic</a></li>-->
 								<!--<li><a href="elements.html">Elements</a></li>-->
 								<!--<li><a href="#">Sign Up</a></li>-->
