--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Andrew Burrell - Portfolio</a></h1>
 						<nav>
-							<a href="#menu">Menu</a>
+							<!--<a href="#menu">Menu</a>-->
 						</nav>
 					</header>
 
@@ -70,12 +70,14 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/umich.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Background</h2>
+										<h2 class="major">Background Highlights</h2>
 										<ul>
+											<li>3+ years of professional software development experience.</li>
+											<li>Making games with Unity since 2014 (so about ~8 years now), and have been using it consistantly ever since.</li>
 											<li>Graduated from the University of Michigan - Ann Arbor in 2018, with a dual Bachelors degree in Computer Science and Mechanical Engineering.</li>
-											<li>Started making games in Unity in 2014, and have been using it consistantly ever since.</li>
-											<li>Best Languages: C# and C++.</li>
+											<li>Best languages are C# and C++, but I have some experience in Python too.</li>
 										</ul>
+										<p>Take a look at my <a href="https://saruto.github.io/documents/Andrew%20Burrell%20Resume.pdf">resumé</a> for more info!</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
