--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class="logo"><span class="icon"><i class="fas fa-gamepad"></i></span></div>
 							<h2>Andrew Burrell</h2>
 							<p>Software Engineer &nbsp;•&nbsp; Game Developer &nbsp;•&nbsp; Mid-level Marth Player</p>
 						</div>
