added elementum link

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 											<p>A 4-player cooperative roguelike, where each player needs to combine their unique elemental magic with creativity and teamwork to win! Follow <a href="https://twitter.com/cuppagames">@cuppagames</a>, or check out one of our dev's <a href="https://www.youtube.com/channel/UCUFdjZJa-YGZRrvm3B1nIRA">youtube channel</a> to stay tuned for more info!</p>
 											<a href="https://twitter.com/cuppagames" class="special">Check out our twitter!</a>
 											<a href="https://t.co/uBCXAtgx42" class="special">Watch our first devlog!</a>
+											<a href="https://cuppa-games.itch.io/elementum" class="special">Play an *early* prototype!</a>
 										</article-large>
 										<article>
 											<a href="https://ldjam.com/events/ludum-dare/46/lights-out-3" class="image"><img src="images/lightsout.gif" alt="" /></a>
