--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 									<a href="#" class="image"><img src="images/self.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">It's-a me!</h2>
-										<p>I'm Andrew! I'm a software developer currently working as a UI/UX software engineer at <a href="https://www.arriver.com">Arriver</a>.</p>
-										<p>I'm also a game developer, and have made a bunch of stuff using Unity! I spend most of my free time playing games, reading about game design, or, you know, making games!</p>
+										<p>I'm Andrew! I'm a software developer currently working as a game developer at <a href="https://www.aspyr.com/">Aspyr</a>.</p>
+										<p>I'm also do indie game development too, and make a bunch of stuff using Unity! I spend most of my free time playing games, reading about game design, or, you know, making games!</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
