--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/self.jpg" alt="" /></a>
+									<a href="https://www.linkedin.com/in/andrew-burrell-b4496517b/" class="image"><img src="images/self.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">It's-a me!</h2>
-										<p>I'm Andrew! I'm a software developer currently working as a game developer at <a href="https://www.aspyr.com/">Aspyr</a>.</p>
+										<h2 class="major">It's me!</h2>
+										<p>I'm Andrew! I'm a software developer currently working as a game developer at <u><a href="https://www.aspyr.com/">Aspyr Media</a></u>.</p>
 										<p>I'm also do indie game development too, and make a bunch of stuff using Unity! I spend most of my free time playing games, reading about game design, or, you know, making games!</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
@@ -68,16 +68,16 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/umich.jpg" alt="" /></a>
+									<a href="https://cse.engin.umich.edu/" class="image"><img src="images/umich.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Background Highlights</h2>
 										<ul>
-											<li>3+ years of professional software development experience.</li>
-											<li>Making games with Unity since 2014 (so about ~8 years now), and have been using it consistantly ever since.</li>
+											<li>5+ years of professional software development experience.</li>
+											<li>Making games with Unity since 2014, and have been using it consistantly ever since.</li>
 											<li>Graduated from the University of Michigan - Ann Arbor in 2018, with a dual Bachelors degree in Computer Science and Mechanical Engineering.</li>
 											<li>Best languages are C# and C++, but I have some experience in Python too.</li>
 										</ul>
-										<p>Take a look at my <a href="https://saruto.github.io/documents/Andrew%20Burrell%20Resume.pdf">resumé</a> for more info!</p>
+										<p>Take a look at my <u><a href="https://saruto.github.io/documents/Andrew%20Burrell%20Resume.pdf">resumé</a></u> for more info!</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
@@ -86,10 +86,10 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/cuppalogo.png" alt="" /></a>
+									<a href="https://cuppagames.com/" class="image"><img src="images/cuppalogo.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Onwards and (hopefully) Upwards!</h2>
-										<p>I'm also the co-founder of Cuppa Games, a game development company focusing on brewing cozy multiplayer experiences! We actually just announced our first major title - Project Chromaticasters! Check it out in the next section!</p>
+										<p>I'm also the co-founder of <u><a href="https://cuppagames.com/">Cuppa Games</a></u>, a game development company focusing on brewing cozy multiplayer experiences! We actually just announced our first major title - Chromaticasters! Check it out in the next section!</p>
 										<p>Software and video game development is going to be a major part of my life forever - I hope this little website can showcase a fraction of all the love and passion I have towards them!</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
@@ -102,15 +102,16 @@
 									<h2 class="major">My Creations</h2>
 									<section class="features">
 										<article-large>
-											<a href="https://twitter.com/cuppagames" class="image"><img src="images/buttermilk.png" alt="" /></a>
-											<h3 class="major">Project Chromaticasters</h3>
-											<p>A 4-player cooperative roguelike, where each player needs to combine their unique elemental magic with creativity and teamwork to win! Follow <a href="https://twitter.com/cuppagames">@cuppagames</a>, or check out one of our dev's <a href="https://www.youtube.com/channel/UCUFdjZJa-YGZRrvm3B1nIRA">youtube channel</a> to stay tuned for more info!</p>
+											<a href="https://store.steampowered.com/app/2538510/Chromaticasters/" class="image"><img src="images/buttermilk.png" alt="" /></a>
+											<h3 class="major">Chromaticasters</h3>
+											<p>A chaotically-cute co-op roguelike, where everyone needs to combine their unique elemental magic with creativity and teamwork to survive! Follow <u><a href="https://store.steampowered.com/app/2538510/Chromaticasters/">@cuppagames</a></u>, or check out one of our dev's <u><a href="https://www.youtube.com/channel/UCUFdjZJa-YGZRrvm3B1nIRA">youtube channel</a></u> to stay tuned for more info!</p>
+											<a href="https://store.steampowered.com/app/2538510/Chromaticasters/" class="special">Wishlist it on Steam!</a>
 											<a href="https://twitter.com/cuppagames" class="special">Check out our twitter!</a>
 											<a href="https://t.co/uBCXAtgx42" class="special">Watch our first devlog!</a>
-											<a href="https://cuppa-games.itch.io/elementum" class="special">Play an *early* prototype!</a>
+											<a href="https://cuppa-games.itch.io/chromaticaster-pre-alpha" class="special">Play an early demo!</a>
 										</article-large>
 										<article>
-											<a href="https://ldjam.com/events/ludum-dare/46/lights-out-3" class="image"><img src="images/lightsout.gif" alt="" /></a>
+											<u><a href="https://ldjam.com/events/ludum-dare/46/lights-out-3" class="image"><img src="images/lightsout.gif" alt="" /></a></u>
 											<h3 class="major">Lights Out</h3>
 											<p>A dark, moody horror platformer we made for Ludum Dare 46 (the theme: "Keep it alive"), where your candle is your life. This one's a personal favorite - it was a ton of fun working on something more atmospheric.</p>
 											<a href="https://ldjam.com/events/ludum-dare/46/lights-out-3" class="special">Play it Here!</a>
@@ -130,7 +131,7 @@
 										<article>
 											<a href="https://kusanagi.itch.io/tentacle-turmoil" class="image"><img src="images/tentacleturmoil.gif" alt="" /></a>
 											<h3 class="major">Tentacle Turmoil</h3>
-											<p>A chaotic co-op action game where you and three friends each control a single tentacle of a giant, clumsy sea monster! Created for my senior project class.</p>
+											<p>A co-op action game where you and three friends each control a single tentacle of a giant, clumsy sea monster! Created for my senior project class.</p>
 											<a href="https://kusanagi.itch.io/tentacle-turmoil" class="special">Play it Here!</a>
 										</article>
 										<article>
