underline to bold

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<a href="https://www.linkedin.com/in/andrew-burrell-b4496517b/" class="image"><img src="images/self.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">It's me!</h2>
-										<p>I'm Andrew! I'm a software developer currently working as a game developer at <u><a href="https://www.aspyr.com/">Aspyr Media</a></u>.</p>
+										<p>I'm Andrew! I'm a software developer currently working at <b><a href="https://www.aspyr.com/">Aspyr Media</a></b>.</p>
 										<p>I'm also do indie game development too, and make a bunch of stuff using Unity! I spend most of my free time playing games, reading about game design, or, you know, making games!</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
@@ -77,7 +77,7 @@
 											<li>Graduated from the University of Michigan - Ann Arbor in 2018, with a dual Bachelors degree in Computer Science and Mechanical Engineering.</li>
 											<li>Best languages are C# and C++, but I have some experience in Python too.</li>
 										</ul>
-										<p>Take a look at my <u><a href="https://saruto.github.io/documents/Andrew%20Burrell%20Resume.pdf">resumé</a></u> for more info!</p>
+										<p>Take a look at my <b><a href="https://saruto.github.io/documents/Andrew%20Burrell%20Resume.pdf">resumé</a></b> for more info!</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
@@ -89,7 +89,7 @@
 									<a href="https://cuppagames.com/" class="image"><img src="images/cuppalogo.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Onwards and (hopefully) Upwards!</h2>
-										<p>I'm also the co-founder of <u><a href="https://cuppagames.com/">Cuppa Games</a></u>, a game development company focusing on brewing cozy multiplayer experiences! We actually just announced our first major title - Chromaticasters! Check it out in the next section!</p>
+										<p>I'm also the co-founder of <b><a href="https://cuppagames.com/">Cuppa Games</a></b>, a game development company focusing on brewing cozy multiplayer experiences! We actually just announced our first major title - Chromaticasters! Check it out in the next section!</p>
 										<p>Software and video game development is going to be a major part of my life forever - I hope this little website can showcase a fraction of all the love and passion I have towards them!</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
@@ -104,7 +104,7 @@
 										<article-large>
 											<a href="https://store.steampowered.com/app/2538510/Chromaticasters/" class="image"><img src="images/buttermilk.png" alt="" /></a>
 											<h3 class="major">Chromaticasters</h3>
-											<p>A chaotically-cute co-op roguelike, where everyone needs to combine their unique elemental magic with creativity and teamwork to survive! Follow <u><a href="https://store.steampowered.com/app/2538510/Chromaticasters/">@cuppagames</a></u>, or check out one of our dev's <u><a href="https://www.youtube.com/channel/UCUFdjZJa-YGZRrvm3B1nIRA">youtube channel</a></u> to stay tuned for more info!</p>
+											<p>A chaotically-cute co-op roguelike, where everyone needs to combine their unique elemental magic with creativity and teamwork to survive! Follow <b><a href="https://store.steampowered.com/app/2538510/Chromaticasters/">@cuppagames</a></b>, or check out one of our dev's <b><a href="https://www.youtube.com/channel/UCUFdjZJa-YGZRrvm3B1nIRA">youtube channel</a></b> to stay tuned for more info!</p>
 											<a href="https://store.steampowered.com/app/2538510/Chromaticasters/" class="special">Wishlist it on Steam!</a>
 											<a href="https://twitter.com/cuppagames" class="special">Check out our twitter!</a>
 											<a href="https://t.co/uBCXAtgx42" class="special">Watch our first devlog!</a>
@@ -131,7 +131,7 @@
 										<article>
 											<a href="https://kusanagi.itch.io/tentacle-turmoil" class="image"><img src="images/tentacleturmoil.gif" alt="" /></a>
 											<h3 class="major">Tentacle Turmoil</h3>
-											<p>A co-op action game where you and three friends each control a single tentacle of a giant, clumsy sea monster! Created for my senior project class.</p>
+											<p>A co-op action game where you and three friends each control a single tentacle of a giant, clumsy sea monster! Created for my senior capstone project.</p>
 											<a href="https://kusanagi.itch.io/tentacle-turmoil" class="special">Play it Here!</a>
 										</article>
 										<article>
