--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
 											<a href="https://t.co/uBCXAtgx42" class="special">Watch our first devlog!</a>
 											<a href="https://cuppa-games.itch.io/chromaticaster-pre-alpha" class="special">Play an early demo!</a>
 										</article-large>
+										<article-large>
+											<u><a href="https://store.steampowered.com/app/2915920/Locally_Sourced_Anthology_I_A_Space_Atlas/" class="image"><img src="images/neptunalia_long.png" alt="" /></a></u>
+											<h3 class="major">Neptunalia: Reel Lost</h3>
+											<p>A cozy fishing game where you've crashlanded on Neptune and have to help the locals with their various fish-related problems. Combines Animal Crossing's fishing with Resident Evil's inventory management into a short, chill experience. Created for the Locally Sourced Anthology.</p>
+											<a href="https://store.steampowered.com/app/2915920/Locally_Sourced_Anthology_I_A_Space_Atlas/" class="special">Buy the Anthology Here!</a>
+										</article-large>
 										<article>
 											<u><a href="https://ldjam.com/events/ludum-dare/46/lights-out-3" class="image"><img src="images/lightsout.gif" alt="" /></a></u>
 											<h3 class="major">Lights Out</h3>
