updated demo link

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 											<a href="https://store.steampowered.com/app/2538510/Chromaticasters/" class="image"><img src="images/buttermilk.png" alt="" /></a>
 											<h3 class="major">Chromaticasters</h3>
 											<p>A chaotically-cute co-op roguelike, where everyone needs to combine their unique elemental magic with creativity and teamwork to survive! Follow <b><a href="https://store.steampowered.com/app/2538510/Chromaticasters/">@cuppagames</a></b>, or check out one of our dev's <b><a href="https://www.youtube.com/channel/UCUFdjZJa-YGZRrvm3B1nIRA">youtube channel</a></b> to stay tuned for more info!</p>
+											<a href="https://store.steampowered.com/app/3459190/Chromaticasters_Demo/" class="special">Play the demo!</a>
 											<a href="https://store.steampowered.com/app/2538510/Chromaticasters/" class="special">Wishlist it on Steam!</a>
 											<a href="https://twitter.com/cuppagames" class="special">Check out our twitter!</a>
 											<a href="https://t.co/uBCXAtgx42" class="special">Watch our first devlog!</a>
-											<a href="https://cuppa-games.itch.io/chromaticaster-pre-alpha" class="special">Play an early demo!</a>
 										</article-large>
 										<article-large>
 											<u><a href="https://store.steampowered.com/app/2915920/Locally_Sourced_Anthology_I_A_Space_Atlas/" class="image"><img src="images/neptunalia_long.png" alt="" /></a></u>
